Now specifying z-index for chrome fast overflow scrolling bug.

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -40,6 +40,7 @@ md-list md-list-item {
 
   md-sidenav {
     overflow-y: scroll; /* has to be scroll, not auto */
+    z-index: 0;
 	  -webkit-overflow-scrolling: touch;
     max-width: 75% !important;
     min-width: inherit;
